--- a/style.css
+++ b/style.css
@@ -1,74 +1,21 @@
-
-header {
-    text-align: center;
-    background-color: #fffd7f;
-    padding-top: 10px;
-    padding-bottom: 20px;
-    margin: 0 auto;
-    opacity: 0.8;  
-    }
-body {
-    margin:0;
-    background-color: #7fffd4;
-    background-image: url("https://www.transparenttextures.com/patterns/white-diamond.png");
+.container-style {
+  max-width: 40vw;
+  min-height: 80vh;
+  border: 1px solid black;
+  background-color: #7fffd4;
+  background-image: url("https://www.transparenttextures.com/patterns/white-diamond.png");
 }
+.header {
+  background-color: #fffd7f;
+}
+.result {
+  height: 15vh;
+  font-size: 4rem;
+  font-style: oblique;
+}
+
 h1 {
     font-size: 40px;
     font-style: italic;
     color: brown;
 }
- 
-h4 {
-    font-size: 30px;
-    font-style: bold;
-    color: rgb(65, 11, 126);
-    text-align: center;
-    margin-top: 10px;
-    
-}
-button, #pcChoice {
-    border: 1px solid #466995;
-    display: inline-block;
-    background-color: bisque;
-    width: 150px;
-    height: 40px;
-    text-align: center;
-    font-weight: bold;
-    align-items: center;
-    margin: 5px;
-    border-radius: 5px;
-}
-.selection {
-    width: 100%;
-    height: 300px;
-    text-align: center;
-  }
-  
-#pc {
-    border: 1px solid #466995;
-    background-color: bisque;
-    width: 150px;
-    margin: auto;
-    height: 40px;
-    font-size: 20px;
-    font-weight: bold;
-    padding-top: 20px;
-    border-radius: 5px;
-}
-#result {
-    height: 100px;
-    font-size: 80px;
-    font-style: oblique;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   }
-
-.selection.computerschoice {
-    border: 1px solid #466995;
-    width: 100%;
-    height: 200px;
-    text-align: center;
-  }
-
-  
